# rock_club

./: .env.example  .pre-commit-config.yaml  Dockerfile  Jenkinsfile  docker-compose.yaml  piccolo_conf.py  pyproject.toml
src/: app.py  piccolo_conf.py
src/api/: __init__.py  exceptions.py  welcome.py
src/api/v1/: __init__.py  auth.py  bands.py  schedule.py  users.py
src/config/: __init__.py  piccolo_app.py  settings.py
src/models/: __init__.py  bands.py  rehearsals.py  users.py
src/models/migrations/: default_2024_11_23t15_48_26_612147.py  default_2024_11_23t18_55_27_294290.py  default_2024_11_24t00_37_03_703449.py  default_2024_12_01t22_33_27_822931.py  default_2024_12_01t23_46_40_336164.py  default_2024_12_02t21_57_30_140500.py  default_2024_12_09t21_27_28_509627.py  default_2024_12_09t21_28_23_112140.py  default_2024_12_09t22_11_18_161089.py  default_2024_12_15t18_47_59_180190.py
src/services/: bands.py  schedule.py  types.py  users.py
src/services/auth/: handlers.py  login.py  types.py  utils.py
src/services/s3/: client.py  types.py
